--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "name": "demo1",
   "private": true,
-  "dependencies": {}
+  "dependencies": {},
+  "server.listen(process.env.PORT || port)"
+
+
+
 }
